Add operation ids in endpoints and fix client method names
